// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StoreLocatorList stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="mt-4"
  >
    <div
      class="mb-4"
    >
      <div
        class="text-sm font-semibold flex justify-center items-center text-center"
      >
        Viewing stores within 100 km of 94102 in United States
      </div>
      <div
        class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px mt-4"
        data-orientation="horizontal"
        data-slot="separator"
        role="none"
      />
    </div>
    <div
      aria-required="false"
      class="grid gap-3 store-locator-square-radio-group"
      data-slot="radio-group"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <ul>
        <li
          class="py-3"
        >
          <label
            class="flex items-start gap-3"
            for="selectedStore-_r_0_-store-1"
          >
            <button
              aria-checked="false"
              aria-describedby="store-info-store-1"
              class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-ui transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 store-locator-square-radio mt-1"
              data-radix-collection-item=""
              data-slot="radio-group-item"
              data-state="unchecked"
              id="selectedStore-_r_0_-store-1"
              role="radio"
              tabindex="-1"
              type="button"
              value="store-1"
            />
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="grid grid-cols-2 gap-2 md:grid-cols-[260px_1fr_auto]"
                id="store-info-store-1"
              >
                <div
                  class="col-span-1"
                >
                  <div
                    class="text-sm font-semibold text-left"
                  >
                    Downtown Store
                  </div>
                </div>
                <div
                  class="col-span-2 md:col-span-1 md:col-start-2"
                >
                  <div
                    class="text-sm text-muted-foreground text-left"
                  >
                    <div>
                      123 Main Street
                    </div>
                    <div>
                      San Francisco, CA 94102
                    </div>
                  </div>
                </div>
                <div
                  class="col-span-2 md:col-span-1 md:col-start-1 md:mt-2"
                >
                  <div
                    class="text-muted-foreground text-left text-xs flex items-center gap-1"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-map-pin size-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                      />
                      <circle
                        cx="12"
                        cy="10"
                        r="3"
                      />
                    </svg>
                    2.50 km away
                  </div>
                </div>
              </div>
            </div>
          </label>
          <div
            class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px my-3"
            data-orientation="horizontal"
            data-slot="separator"
            role="none"
          />
        </li>
        <li
          class="py-3"
        >
          <label
            class="flex items-start gap-3"
            for="selectedStore-_r_0_-store-2"
          >
            <button
              aria-checked="false"
              aria-describedby="store-info-store-2"
              class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-ui transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 store-locator-square-radio mt-1"
              data-radix-collection-item=""
              data-slot="radio-group-item"
              data-state="unchecked"
              id="selectedStore-_r_0_-store-2"
              role="radio"
              tabindex="-1"
              type="button"
              value="store-2"
            />
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="grid grid-cols-2 gap-2 md:grid-cols-[260px_1fr_auto]"
                id="store-info-store-2"
              >
                <div
                  class="col-span-1"
                >
                  <div
                    class="text-sm font-semibold text-left"
                  >
                    Uptown Store
                  </div>
                </div>
                <div
                  class="col-span-2 md:col-span-1 md:col-start-2"
                >
                  <div
                    class="text-sm text-muted-foreground text-left"
                  >
                    <div>
                      456 Oak Avenue
                    </div>
                    <div>
                      San Francisco, CA 94103
                    </div>
                  </div>
                </div>
                <div
                  class="col-span-2 md:col-span-1 md:col-start-1 md:mt-2"
                >
                  <div
                    class="text-muted-foreground text-left text-xs flex items-center gap-1"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-map-pin size-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                      />
                      <circle
                        cx="12"
                        cy="10"
                        r="3"
                      />
                    </svg>
                    5.20 km away
                  </div>
                </div>
              </div>
            </div>
          </label>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`StoreLocatorList stories snapshot > DesktopLayout story renders and matches snapshot 1`] = `
<div>
  <div
    class="mt-4"
  >
    <div
      class="mb-4"
    >
      <div
        class="text-sm font-semibold flex justify-center items-center text-center"
      >
        Viewing stores within 100 km of 94102 in United States
      </div>
      <div
        class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px mt-4"
        data-orientation="horizontal"
        data-slot="separator"
        role="none"
      />
    </div>
    <div
      aria-required="false"
      class="grid gap-3 store-locator-square-radio-group"
      data-slot="radio-group"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <ul>
        <li
          class="py-3"
        >
          <label
            class="flex items-start gap-3"
            for="selectedStore-_r_6_-store-1"
          >
            <button
              aria-checked="false"
              aria-describedby="store-info-store-1"
              class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-ui transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 store-locator-square-radio mt-1"
              data-radix-collection-item=""
              data-slot="radio-group-item"
              data-state="unchecked"
              id="selectedStore-_r_6_-store-1"
              role="radio"
              tabindex="-1"
              type="button"
              value="store-1"
            />
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="grid grid-cols-2 gap-2 md:grid-cols-[260px_1fr_auto]"
                id="store-info-store-1"
              >
                <div
                  class="col-span-1"
                >
                  <div
                    class="text-sm font-semibold text-left"
                  >
                    Downtown Store
                  </div>
                </div>
                <div
                  class="col-span-2 md:col-span-1 md:col-start-2"
                >
                  <div
                    class="text-sm text-muted-foreground text-left"
                  >
                    <div>
                      123 Main Street
                    </div>
                    <div>
                      San Francisco, CA 94102
                    </div>
                  </div>
                </div>
                <div
                  class="col-span-2 md:col-span-1 md:col-start-1 md:mt-2"
                >
                  <div
                    class="text-muted-foreground text-left text-xs flex items-center gap-1"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-map-pin size-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                      />
                      <circle
                        cx="12"
                        cy="10"
                        r="3"
                      />
                    </svg>
                    2.50 km away
                  </div>
                </div>
              </div>
            </div>
          </label>
          <div
            class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px my-3"
            data-orientation="horizontal"
            data-slot="separator"
            role="none"
          />
        </li>
        <li
          class="py-3"
        >
          <label
            class="flex items-start gap-3"
            for="selectedStore-_r_6_-store-2"
          >
            <button
              aria-checked="false"
              aria-describedby="store-info-store-2"
              class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-ui transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 store-locator-square-radio mt-1"
              data-radix-collection-item=""
              data-slot="radio-group-item"
              data-state="unchecked"
              id="selectedStore-_r_6_-store-2"
              role="radio"
              tabindex="-1"
              type="button"
              value="store-2"
            />
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="grid grid-cols-2 gap-2 md:grid-cols-[260px_1fr_auto]"
                id="store-info-store-2"
              >
                <div
                  class="col-span-1"
                >
                  <div
                    class="text-sm font-semibold text-left"
                  >
                    Uptown Store
                  </div>
                </div>
                <div
                  class="col-span-2 md:col-span-1 md:col-start-2"
                >
                  <div
                    class="text-sm text-muted-foreground text-left"
                  >
                    <div>
                      456 Oak Avenue
                    </div>
                    <div>
                      San Francisco, CA 94103
                    </div>
                  </div>
                </div>
                <div
                  class="col-span-2 md:col-span-1 md:col-start-1 md:mt-2"
                >
                  <div
                    class="text-muted-foreground text-left text-xs flex items-center gap-1"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-map-pin size-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                      />
                      <circle
                        cx="12"
                        cy="10"
                        r="3"
                      />
                    </svg>
                    5.20 km away
                  </div>
                </div>
              </div>
            </div>
          </label>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`StoreLocatorList stories snapshot > MobileLayout story renders and matches snapshot 1`] = `
<div>
  <div
    class="mt-4"
  >
    <div
      class="mb-4"
    >
      <div
        class="text-sm font-semibold flex justify-center items-center text-center"
      >
        Viewing stores within 100 km of 94102 in United States
      </div>
      <div
        class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px mt-4"
        data-orientation="horizontal"
        data-slot="separator"
        role="none"
      />
    </div>
    <div
      aria-required="false"
      class="grid gap-3 store-locator-square-radio-group"
      data-slot="radio-group"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <ul>
        <li
          class="py-3"
        >
          <label
            class="flex items-start gap-3"
            for="selectedStore-_r_3_-store-1"
          >
            <button
              aria-checked="false"
              aria-describedby="store-info-store-1"
              class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-ui transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 store-locator-square-radio mt-1"
              data-radix-collection-item=""
              data-slot="radio-group-item"
              data-state="unchecked"
              id="selectedStore-_r_3_-store-1"
              role="radio"
              tabindex="-1"
              type="button"
              value="store-1"
            />
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="grid grid-cols-2 gap-2 md:grid-cols-[260px_1fr_auto]"
                id="store-info-store-1"
              >
                <div
                  class="col-span-1"
                >
                  <div
                    class="text-sm font-semibold text-left"
                  >
                    Downtown Store
                  </div>
                </div>
                <div
                  class="col-span-2 md:col-span-1 md:col-start-2"
                >
                  <div
                    class="text-sm text-muted-foreground text-left"
                  >
                    <div>
                      123 Main Street
                    </div>
                    <div>
                      San Francisco, CA 94102
                    </div>
                  </div>
                </div>
                <div
                  class="col-span-2 md:col-span-1 md:col-start-1 md:mt-2"
                >
                  <div
                    class="text-muted-foreground text-left text-xs flex items-center gap-1"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-map-pin size-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                      />
                      <circle
                        cx="12"
                        cy="10"
                        r="3"
                      />
                    </svg>
                    2.50 km away
                  </div>
                </div>
              </div>
            </div>
          </label>
          <div
            class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px my-3"
            data-orientation="horizontal"
            data-slot="separator"
            role="none"
          />
        </li>
        <li
          class="py-3"
        >
          <label
            class="flex items-start gap-3"
            for="selectedStore-_r_3_-store-2"
          >
            <button
              aria-checked="false"
              aria-describedby="store-info-store-2"
              class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-ui transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 store-locator-square-radio mt-1"
              data-radix-collection-item=""
              data-slot="radio-group-item"
              data-state="unchecked"
              id="selectedStore-_r_3_-store-2"
              role="radio"
              tabindex="-1"
              type="button"
              value="store-2"
            />
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="grid grid-cols-2 gap-2 md:grid-cols-[260px_1fr_auto]"
                id="store-info-store-2"
              >
                <div
                  class="col-span-1"
                >
                  <div
                    class="text-sm font-semibold text-left"
                  >
                    Uptown Store
                  </div>
                </div>
                <div
                  class="col-span-2 md:col-span-1 md:col-start-2"
                >
                  <div
                    class="text-sm text-muted-foreground text-left"
                  >
                    <div>
                      456 Oak Avenue
                    </div>
                    <div>
                      San Francisco, CA 94103
                    </div>
                  </div>
                </div>
                <div
                  class="col-span-2 md:col-span-1 md:col-start-1 md:mt-2"
                >
                  <div
                    class="text-muted-foreground text-left text-xs flex items-center gap-1"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-map-pin size-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                      />
                      <circle
                        cx="12"
                        cy="10"
                        r="3"
                      />
                    </svg>
                    5.20 km away
                  </div>
                </div>
              </div>
            </div>
          </label>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
